--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
@@ -124,10 +124,10 @@
       background-color: $secondary-black;
       position: absolute;
       content: '';
-      width: 10vw;
+      width: 20vw;
       height: 100%;
       top: 0;
-      right: -50px;
+      right: -4rem;
       z-index: 1 !important;
       transform: skew(-14deg);
     }
