Top level nav refactor

--- a/source/themes/custom/gearwrench/styles/abstracts/variables/_breakpoints.scss
+++ b/source/themes/custom/gearwrench/styles/abstracts/variables/_breakpoints.scss
@@ -6,7 +6,9 @@
 $bp-xs: em(480) !default;
 $bp-sm: em(568) !default;
 $bp-md: em(768) !default;
+$bp-md: em(768) !default;
 $bp-lg: em(980) !default;
+$bp-lg-plus: em(1024) !default;
 $bp-xl: em(1280) !default;
 $bp-gr: em(1450) !default;
 
@@ -16,6 +18,7 @@ $breakpoints: (
   sm: $bp-sm,
   md: $bp-md,
   lg: $bp-lg,
+  lg-plus: $bp-lg-plus,
   xl: $bp-xl,
   gr: $bp-gr
 );
