--- a/source/themes/custom/gearwrench/styles/abstracts/variables/_font-families.scss
+++ b/source/themes/custom/gearwrench/styles/abstracts/variables/_font-families.scss
@@ -3,10 +3,10 @@
 // Preferred and fallback font families
 // -----------------------------------------------------------------------------
 
-// Default: Sans-serif font family
+// Default: Body font family
 $font-default: 'Aktiv Grotesk', 'Arial', sans-serif !default;
 
-// Brand: Serif font family
+// Brand: Heading font family
 $font-brand: 'Akrobat', 'Arial', sans-serif !default;
 
 // Mono: Mono spaced font family
