--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -523,9 +523,8 @@ $mobile-menu-item-button-height: 7rem;
       }
 
       .all-tools-menu {
-        flex: 1;
+        flex: 2 1 auto;
         padding-left: 2rem;
-
 
         .menu-item__panel-header {
           padding: 2.75rem 0 1rem;
