Updated primary hex color, changed secondary-black to black

--- a/source/themes/custom/gearwrench/styles/abstracts/variables/_colors.scss
+++ b/source/themes/custom/gearwrench/styles/abstracts/variables/_colors.scss
@@ -14,7 +14,7 @@ $color-blue: #0080FF;
 $color-dark-blue: #0055A9;
 
 // Primary - Molten Orange
-$primary-orange: #ED8B00;
+$primary-orange: #EB8900;
 $primary-dark: #BB720B;
 $primary-light: #FDBB5E;
 
