--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -733,7 +733,7 @@ $mobile-menu-item-button-height: 7rem;
 }
 
 .header-ease-in-out {
-  transition-timing-function: ease-in-out;
+  transition-timing-function: $transition-base-style;
   transition: 0.25s;
 }
 
