Updated header hide and ease class names

--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -728,11 +728,11 @@ $mobile-menu-item-button-height: 7rem;
 }
 
 // Hides header when scroll up
-.header-hide {
+.region-header--hide {
   top: -$header-height;
 }
 
-.header-ease-in-out {
+.region-header--ease-in-out {
   transition-timing-function: $transition-base-style;
   transition: 0.25s;
 }
