changed active menu text to bold

--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -457,6 +457,7 @@ $mobile-menu-item-button-height: 7rem;
             justify-content: center;
             align-self: center;
             background-color: $black;
+            font-weight: $fw-extra-bold;
 
             &::before,
             &::after {
