VYRKCATG-65, VYRKCATG-31, VYRKCATG-41

--- a/source/themes/custom/gearwrench/styles/base/_inputs.scss
+++ b/source/themes/custom/gearwrench/styles/base/_inputs.scss
@@ -6,14 +6,18 @@
 // basic inputs
 input,
 textarea,
-select {
+select,
+input.webform-counter-warning,
+input.form-text.webform-counter-warning,
+textarea.webform-counter-warning,
+textarea.form-textarea.webform-counter-warning {
   background: transparent;
   border: rem(1px) solid $gray-30;
   border-radius: 0;
   color: $gray-30;
   max-width: 100%;
   outline: 0 none;
-  padding: .7rem 1.75rem 0.55rem;
+  padding: 1rem 1.75rem;
   transition: $transition-base;
   -webkit-appearance: none;
   width: 100%;
@@ -36,6 +40,13 @@ input[type='submit'],
 .btn {
   @include btn(primary);
 }
+
+//.form-container {
+//  @include container($container-md, $md, left, false);
+//  @include flex();
+//  @include flex-x(flex-wrap, wrap);
+//  @include flex-x(justify-content, space-between);
+//}
 
 // form titles
 .block-webform-block__title {
@@ -67,6 +78,194 @@ input[type='submit'],
 //form button
 .form-actions {
   margin: rem(24px) 0 1rem;
+}
+
+// Checkbox & Radio buttons
+$marker-to-text-space: 1.625rem;
+$active-width: 1.125rem;
+$active-gap: 8px; // the math likes px values
+
+.form-checkboxes,
+.form-radios {
+  // item groups
+  .form-item {
+    @include flex-x(align-items, center);
+    @include flex-x(flex-direction, row);
+    @include flex-x(flex-wrap, wrap);
+  }
+
+  .form-item:last-of-type {
+    margin-bottom: 0;
+  }
+
+  input {
+    width: inherit;
+  }
+
+  // hide the default input box
+  input[type='checkbox']:checked,
+  input[type='checkbox']:not(:checked),
+  input[type='radio']:checked,
+  input[type='radio']:not(:checked) {
+    position: absolute;
+    left: -9999px;
+  }
+
+  // create a fake input box
+  input[type='checkbox']:checked + label,
+  input[type='checkbox']:not(:checked) + label,
+  input[type='radio']:checked + label,
+  input[type='radio']:not(:checked) + label {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    line-height: 1;
+    padding-left: $marker-to-text-space;
+  }
+
+  // fake input box base
+  input[type='checkbox']:checked + label:before,
+  input[type='checkbox']:not(:checked) + label:before,
+  input[type='radio']:checked + label:before,
+  input[type='radio']:not(:checked) + label:before {
+    background: $black;
+    border: 1px solid $black;
+    content: '';
+    height: $active-width;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: $active-width;
+  }
+
+  input[type='checkbox']:checked + label:before {
+    background-color: transparent;
+  }
+
+  // fake input box active indicator
+  input[type='checkbox']:checked + label:after,
+  input[type='checkbox']:checked + .form-required:after,
+  input[type='checkbox']:not(:checked) + label:after,
+  input[type='radio']:checked + label:after,
+  input[type='radio']:not(:checked) + label:after {
+    background-image: none;
+    display: block;
+    left: $active-gap / 2;
+    height: 0;
+    margin: 0;
+    position: absolute;
+    top: $active-gap / 2;
+    transition: $transition-base;
+    width: 0;
+  }
+
+  // fake input box active indicator NOT checked
+  input[type='checkbox']:not(:checked) + label:after,
+  input[type='checkbox']:not(:checked) + .form-required:after,
+  input[type='radio']:not(:checked) + label:after {
+    opacity: 0;
+    //transform: scale(0);
+  }
+
+  // fake input box active indicator checked
+  input[type='checkbox']:checked + label:after,
+  input[type='checkbox']:checked + label.form-required:after,
+  input[type='radio']:checked + label:after {
+    opacity: 1;
+    //transform: scale(1);
+  }
+
+  //.form-required:after {
+  //  display: inline-block;
+  //  width: 6px;
+  //  height: 6px;
+  //  margin: 0 0.3em;
+  //  content: "";
+  //  vertical-align: super;
+  //  background-image: url(../../../../misc/icons/ee0000/required.svg);
+  //  background-repeat: no-repeat;
+  //  background-size: 6px 6px;
+  //}
+
+  .required-icon {
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    margin: 0 0.3em 1em;
+    background-image: url('/core/misc/icons/ee0000/required.svg');
+    background-repeat: no-repeat;
+    background-size: 6px 6px;
+  }
+
+  // item description
+  .description {
+    margin-left: $marker-to-text-space;
+  }
+}
+
+// Radio buttons
+.form-radios {
+
+  // fake input box base
+  input[type='radio']:checked + label:before,
+  input[type='radio']:not(:checked) + label:before {
+    border-radius: 100%;
+  }
+
+  // fake input box active indicator
+  input[type='radio']:checked + label:after,
+  input[type='radio']:not(:checked) + label:after {
+    background: $primary-orange;
+    border-radius: 100%;
+    content: '';
+    height: calc(#{$active-width} - #{$active-gap});
+    width: calc(#{$active-width} - #{$active-gap});
+  }
+}
+
+// Checkbox buttons
+.form-checkboxes {
+  input[type='checkbox']:checked + label:after,
+  input[type='checkbox']:checked + label.form-required:after,
+  input[type='checkbox']:not(:checked) + label.form-required:after,
+  input[type='checkbox']:not(:checked) + label:after {
+    @include icon-styles;
+    color: $black;
+    content: icon-char(checkmark);
+    font-size: rem(10px);
+    height: $active-width;
+    width: $active-width;
+    left: .15rem;
+  }
+}
+
+// Select
+.form-select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  &:focus {
+    outline: 0 none;
+  }
+}
+
+.form-item-select {
+  @include icon(chevron-thin, after);
+  position: relative;
+
+  &:after {
+    bottom: 0.75rem;
+    pointer-events: none;
+    position: absolute;
+    right: 1rem;
+    transform: rotate(90deg);
+    transition: $transition-base;
+
+    @include bs-ie() {
+      display: none;
+    }
+  }
 }
 
 @include media('<md') {
