--- a/source/themes/custom/gearwrench/styles/abstracts/mixins/_button.scss
+++ b/source/themes/custom/gearwrench/styles/abstracts/mixins/_button.scss
@@ -20,11 +20,18 @@
   font-family: $font-brand;
   font-weight: $fw-bold;
   letter-spacing: 0.03rem;
+  line-height: 1;
   text-align: center;
-  padding: .7rem 3.5rem 0.55rem;
+  padding: 1rem .85rem .85rem;
   text-decoration: none;
   text-transform: uppercase;
   transition: $transition-base;
+  white-space: nowrap;
+
+  @include media('>md') {
+    line-height: 1.625;
+    padding: 1rem 3.5rem .85rem;
+  }
 
   @if $style == primary {
     background-position: 100% 0;
