--- a/source/themes/custom/gearwrench/styles/abstracts/variables/_breakpoints.scss
+++ b/source/themes/custom/gearwrench/styles/abstracts/variables/_breakpoints.scss
@@ -3,6 +3,7 @@
 // Site default breakpoint widths
 // -----------------------------------------------------------------------------
 
+$bp-xs-plus: em(320) !default;
 $bp-xs: em(480) !default;
 $bp-sm: em(568) !default;
 $bp-md: em(768) !default;
@@ -13,6 +14,7 @@ $bp-gr: em(1450) !default;
 
 // Map
 $breakpoints: (
+  xs-plus: $bp-xs-plus,
   xs: $bp-xs,
   sm: $bp-sm,
   md: $bp-md,
