--- a/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
@@ -14,6 +14,8 @@
  * SASS Variables
  */
 $footer-bp-desktop: '>=sm';
+$footer-bp-tablet-landscape: '<=lg-plus';
+$footer-bp-tablet-portrait: '<=md';
 $footer-bp-mobile: '<sm';
 
 /**
@@ -25,15 +27,14 @@ $footer-bp-mobile: '<sm';
   margin-top: 5rem;
 
   .region-footer__inner-container {
-    @include flex;
-    @include flex-x(flex-direction, row);
+    display: grid;
   }
 
   .region-footer-first {
-    color: $secondary-black;
+    color: $secondary-light;
 
     a {
-      @include link(dark, hover);
+      @include link(light, hover);
     }
   }
 
@@ -45,8 +46,12 @@ $footer-bp-mobile: '<sm';
       padding: 0 0 2.75rem;
 
       .block-footer-navigation-block__footer-logo {
-        width: 100%;
         max-width: 16rem;
+        width: 100%;
+
+        svg {
+          height: 1.25rem;
+        }
       }
     }
 
@@ -65,8 +70,8 @@ $footer-bp-mobile: '<sm';
   }
 
   .menu {
-    margin: 1rem 0;
-    padding: 0;
+    margin: 0;
+    padding: 1rem 0;
 
     &.menu--social {
       @include flex;
@@ -115,12 +120,12 @@ $footer-bp-mobile: '<sm';
   }
 
   .menu--footer {
-    @include flex;
-    @include flex-x(flex-direction, column);
-    @include flex-x(flex-wrap, wrap);
-
+    display: grid;
     width: 100%;
-    height: 12rem;
+
+    li {
+      padding-right: .5rem;
+    }
 
     li,
     li a {
@@ -132,27 +137,66 @@ $footer-bp-mobile: '<sm';
   }
 
   .region-footer-second {
-    color: $secondary-light;
+    color: $black;
 
     .region-footer-second__content {
 
+      input,
+      textarea,
+      select {
+        color: $gray-30;
+
+        &::placeholder {
+          color: $gray-30;
+        }
+      }
+
+      input:not([type='submit']) {
+        background: $black;
+        border-color: $black;
+      }
+
       .webform-button--submit {
+        background-image: linear-gradient(90deg, $primary-orange 0%, $primary-orange 50%, $black 50%, $black 100%);
+        border-color: $black;
+        color: $white;
         width: 100%;
+
+        &:hover {
+          color: $black;
+        }
       }
 
     }
   }
-
-
 }
 
 @include media($footer-bp-desktop) {
   .region-footer {
-    background: linear-gradient(to right, $primary-orange 50%, $secondary-black 50%);
+    background: linear-gradient(to right, $black 50%, $primary-orange 50%);
 
     .region-footer__inner-container {
       @include container();
-      @include flex-x(flex-direction, row);
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    .region-footer-first {
+      position: relative;
+      z-index: 0;
+
+      // Performance Device
+      &::after {
+        background-color: $black;
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: -14%;
+        z-index: -1;
+        transform: skew(-14deg);
+      }
     }
 
     .region-footer-first__content {
@@ -160,7 +204,7 @@ $footer-bp-mobile: '<sm';
     }
 
     .region-footer-second__content {
-      padding: 3.75rem 0 3.75rem 3.625rem;
+      padding: 3.75rem 0 3.75rem 7rem;
     }
 
     .block-footer-navigation-block__nav {
@@ -172,28 +216,47 @@ $footer-bp-mobile: '<sm';
     }
 
     .menu--footer {
-      margin: 0 0 0 3rem;
+      grid-template-columns: 1fr 1fr 1fr;
+      margin: 0;
+      padding: 0 0 0 3rem;
     }
   }
 }
 
-@include media('<md') {
+@include media('<1150px') {
+  .region-footer {
+
+    .region-footer__inner-container {
+      grid-template-columns: 55% 45%;
+    }
+
+    .menu--footer {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
+@include media($footer-bp-tablet-landscape) {
 
   .region-footer {
 
     .region-footer__inner-container {
       @include container-full-width();
-      @include flex-x(flex-direction, column);
+      grid-template-columns: 1fr;
 
       .region-footer-first {
         @include container-full-width();
-        background-color: $primary-orange;
+        background-color: $black;
         order: 2;
+
+        &::after {
+          content: none;
+        }
       }
 
       .region-footer-second {
         @include container-full-width();
-        background-color: $secondary-black;
+        background-color: $primary-orange;
         order: 1;
       }
     }
@@ -230,8 +293,19 @@ $footer-bp-mobile: '<sm';
     }
 
     .menu--footer {
-      margin: 0;
+      grid-template-columns: 1fr 1fr 1fr;
+      padding: 0;
     }
-
   }
 }
+
+@include media($footer-bp-tablet-portrait) {
+
+  .region-footer {
+
+    .menu--footer {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
