--- a/docroot/themes/custom/gearwrench/templates/node/node--product--teaser.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product--teaser.html.twig
@@ -15,7 +15,7 @@
  *   Calling other methods, such as node.delete(), will result in an exception.
  *   See \Drupal\node\Entity\Node for a full list of public properties and
  *   methods for the node object.
- * - label: The title of the node.
+ * - label: (optional) The title of the node.
  * - content: All node items. Use {{ content }} to print them all,
  *   or print a subset such as {{ content.field_example }}. Use
  *   {{ content|without('field_example') }} to temporarily suppress the printing
@@ -23,8 +23,8 @@
  * - author_picture: The node author user entity, rendered using the "compact"
  *   view mode.
  * - metadata: Metadata for this node.
- * - date: Themed creation date field.
- * - author_name: Themed author name field.
+ * - date: (optional) Themed creation date field.
+ * - author_name: (optional) Themed author name field.
  * - url: Direct URL of the current node.
  * - display_submitted: Whether submission information should be displayed.
  * - attributes: HTML attributes for the containing element.
@@ -65,67 +65,41 @@
  *
  * @see template_preprocess_node()
  *
- * @ingroup themeable
+ * @todo Remove the id attribute (or make it a class), because if that gets
+ *   rendered twice on a page this is invalid CSS for example: two lists
+ *   in different view modes.
  */
 #}
-{% set classes = [] %}
-
+{% set classes = [
+  'node',
+  'node--type-' ~ node.bundle|clean_class,
+  node.isPromoted() ? 'node--promoted',
+  node.isSticky() ? 'node--sticky',
+  not node.isPublished() ? 'node--unpublished',
+  view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
+] %}
 <article{{ attributes.addClass(classes) }}>
-  {{ title_prefix }}
-  {% if not page %}
-    <header{{ title_attributes }}>
-      <h3>
-        <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-      </h3>
-    </header>
-  {% endif %}
-  {{ title_suffix }}
-
-  <div{{ content_attributes }}>
-    <div class="node--type-product__page-top">
-      {% if product_images %}
-      <div class="product-detail-slider">
-      <div class="product-detail-slider__container">
-        <button class="product-detail-slider__pseudo-prev-button"></button>
-        {{ content.field_product_images }}
-        <button class="product-detail-slider__pseudo-next-button"></button>
-      </div>
-
-        {% if product_image_count > 1 %}
-        <div class="product-detail-slider__thumbs-outer-wrapper">
-        <button class="product-detail-slider__button product-detail-slider__button-prev swiper-button-prev"></button>
-        <div class="product-detail-slider__thumbs-container">
-          <div class="product-detail-slider__thumbs-wrapper">
-            {{ thumbnails }}
+  <div class="node__inner">
+    <div{{ content_attributes.addClass('node__content') }}>
+      <a href="{{ url }}" rel="bookmark">
+        <div class="node__listing-image">
+          {{ content.field_media }}
+        </div>
+        <div class="node__content-container">
+          <header class="node__header">
+            <div class="node__long-description">
+              {{ content.field_long_description }}
+            </div>
+          </header>
+          <div class="node__sku">
+            {{ label }}
+          </div>
+          <div class="node__item-rating">
+            <!-- TODO: Price Spider -->
           </div>
         </div>
-        <button class="product-detail-slider__button product-detail-slider__button-next swiper-button-next"></button>
-      </div>
-        {% endif %}
+      </a>
     </div>
-      {% endif %}
-    <div class="product-detail-content-container">
-      <header{{ title_attributes.addClass('product-detail-content-container__title') }}>
-        <h1>
-          {{ content.field_long_description }}
-        </h1>
-        <span class="sku">{{ label }}</span>
-        <div class="product-detail-content-container__rating-container">
-          <!--Price Spider Rating widget goes here-->
-          <button class="btn">Buy Now</button>
-        </div>
-
-
-      </header>
-      <div class="product-detail-content-container__utility-container">
-      </div>
-      <h5>Features</h5>
-      {{ page_top_products_features }}
-      <span class="more-features-link"><a href="#product-features">See More Features</a> </span>
-    </div>
+    <div class="btn node__buy-now-button">{{ 'Buy Now'|t }}</div>
   </div>
-  </div>
-{#  <div{{ content_attributes }}>#}
-{#    {{ content }}#}
-{#  </div>#}
 </article>
