--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--tabs.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--tabs.scss
@@ -95,12 +95,16 @@ $tabs-border-width-active: rem(5px);
         overflow-x: scroll;
         margin-left: -2rem;
         margin-right: -2rem;
-        scroll-snap-type: x mandatory;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
 
         li {
           display: flex;
           flex: 0 0 auto;
-          scroll-snap-align: start;
 
           &[aria-selected='false'] {
             a {
