--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -888,6 +888,10 @@ $mobile-menu-item-button-height: 7rem;
   @include media('<lg') {
     padding-top: $header-height-mobile;
   }
+
+  body.page-node-type-landing-page & {
+    padding-top: $header-height;
+  }
 }
 
 /**
